--- a/1.md
+++ b/1.md
@@ -12,18 +12,13 @@
 
 1. Install a JDK(Java Development Kit) => from Amazon Corretto
 
-    Amazon Corretto is just a distribution which once installed, does the work of
-
-    setting up a JDK in your computer.
-
-    Basically all you need to do is install it and it's going to do the heavy lifting.
+    Amazon Corretto is just a distribution which once installed, does the work of setting up a JDK in your computer. Basically all you need to do is install it and it's going to do the heavy lifting.
 
     [Amazon-Corretto-11](https://docs.aws.amazon.com/corretto/latest/corretto-11-ug/downloads-list.html)
 
 
     ```shell
     # Checking for a JDK
-
     javac -version # mine: 11.0.18, teacher's: 11.0.10
     java -version
     ```
@@ -32,5 +27,69 @@
 
 2. Download a text editor
 
-3. Write and run our first code
+    You need a text editor to write code.
+
+    On windows, I choose [Visual Studio Code](https://code.visualstudio.com/download).
+
+    then download [Extension Pack for Java] in vscode.
+
+    Now you have everything you need to start building Java applications!
+
+3. Write & Run your first Java code
+
+    ```bash
+    # Create a java project.
+    cd ~
+    mkdir section-one
+    cd section-one
+
+    # Every java file needs to follow the naming convention -> CamelCase.
+    touch HelloJava.java
+    ```
+
+    ```java
+    // In java, you must write all of your code in a class.
+    // And the ClassName needs to be the same as your FileName.
+    // So here we create a class.
+    public class HelloJava {
+
+    }
+
+    /* Notice:
+        the [public] exposes current class to other classes,
+        but since now we have only one class, so it's not really doing anything.
+    */
+    ```
+
+    All right, so what's next is the `main()` method, which is the entry point of a Java application.
+
+    And inside main, we're going to print the message "Hello Java !"
+
+    ```java
+    public class HelloJava {
+        public static void main(String[] args) {
+            System.out.println("Hello Java !");
+        }
+    }
+
+    /* Notice:
+        the semicolon is really important, which means end of statement.
+        every statement in Java, every line of code, needs a semicolon at the end.
+        if you forget your semicolon, your code is not gonna run.
+    */
+    ```
+
+    Now we're ready to compile and run our Java code.
+
+    ```bash
+    # The javac command compiles your code
+    javac <FileName>.java
+
+    # The java command runs the compiled code
+    java FileName
+    ```
+
+    For example
+
+    ![20230308213307](https://aliyun-oss-lpj.oss-cn-qingdao.aliyuncs.com/images/by-clipboard/20230308213307.png)
 
