Add some links of resources.

--- a/1.md
+++ b/1.md
@@ -93,3 +93,13 @@
 
     ![20230308213307](https://aliyun-oss-lpj.oss-cn-qingdao.aliyuncs.com/images/by-clipboard/20230308213307.png)
 
+## Resources
+
+[Bootcamp-Resources](https://github.com/rslim087a/Java-Bootcamp-Resources)
+
+[Learn-The-Part](https://www.learnthepart.com/course/2dfda34d-6bbc-4bd5-8f45-d5999de2f514/a0d30d63-16f5-4702-992a-77b560cbeddd)
+
+Cheet Sheets are teacher's summarize.
+
+Good luck on Workbook 1.1 !
+
