update information in variables

--- a/2.md
+++ b/2.md
@@ -24,5 +24,9 @@ eg: `int peopleOnBus = 20;`
 
 eg: `people` is not the same as `People`
 
+## Update the value inside a variable
 
+Just set it equal to a new value.
+
+Or use `+=`、`-=`、... for short.
 
