--- a/1.md
+++ b/1.md
@@ -86,7 +86,7 @@
     javac <FileName>.java
 
     # The java command runs the compiled code
-    java FileName
+    java <FileName>
     ```
 
     For example
