--- a/5.md
+++ b/5.md
@@ -10,3 +10,18 @@ int numberOfFans = 5000;
 long population = 7800000000L;
 ```
 
+### Type: double
+
+We can use `double` variables to store decimal numbers.
+
+And it's imperative that you always use `double` for math calculations if precision is important.
+
+Avoid `int` and `long` for math calculations !
+
+```java
+double percentage = 55.7;
+
+double dividend = 25;
+System.out.println(dividend); // 25.0
+```
+
