--- a/6.md
+++ b/6.md
@@ -13,3 +13,13 @@ You can use math operators to play with these values and operate on them.
 
 > Notice that we can use the `+` symbol to blend values into a string.
 
+## Think that why do we care about the remainder ?
+
+```java
+int remainder = 10 % 2; // 0
+```
+
+It's very useful if you want to identify odd or even numbers.
+
+See you in workbook 2.3
+
