--- a/7.md
+++ b/7.md
@@ -10,5 +10,5 @@ double decimal = 4.3;
 int integer = (int)decimal;
 ```
 
-See you in the next quiz and workbook.
+See you in the next quiz and workbook 2.4
 
