--- a/1.md
+++ b/1.md
@@ -12,7 +12,8 @@
 
 1. Install a JDK(Java Development Kit) on your machine => from Amazon Corretto
 
-	Amazon Corretto is just a distribution which once installed, does the work of setting up a JDK on your machine. Basically all you need to do is install it and it's going to do the heavy lifting.
+	Amazon Corretto is just a distribution which once installed, does the work of setting up a JDK on your machine.
+	Basically all you need to do is install it and it's going to do the heavy lifting.
 
 	```shell
 	# Checking
@@ -39,15 +40,13 @@
 	// In java, you must write all of your code in a class.
 	// And the ClassName needs to be the same as your FileName.
 	// So here we create a class.
-	
 	public class HelloJava {
 	}
 	
 	/* Notice:
-		the [public] exposes current class to other classes
-		that may exist inside our workspace,
+		the [public] exposes current class to other classes that may exist inside our workspace,
 		but since now we have only one class,
-		so it's not really doing anything.
+		so it's optional.
 	*/
 	```
 	
