--- a/1.md
+++ b/1.md
@@ -71,10 +71,10 @@
 	Now we're ready to compile and run our Java code.
 	
 	```shell
-	# The javac command compiles your code
+	# The javac command compiles your javaCode into byteCode
 	javac <FileName>.java
 	
-	# The java command runs the compiled code
+	# The java command executes the compiled code
 	java <FileName>
 	```
 	
