--- a/3.md
+++ b/3.md
@@ -1,31 +1,53 @@
+## Use variables to store numeric data
 
-### String type
+### Types: int and long
 
-We can use the `String` type to store text.
+We can use `int` and `long` variables to store whole numbers.
 
-```java
-String sentence = "Number of passengers: ";
-```
-
-We can use the `+` symbol to join String values.
+You should know the difference between `int` and `long` and when to use `int` vs `long`.
 
 ```java
-String sentence = "His name is: ";
-String placeholder = "Harry";
-System.out.println(sentence + placeholder);
+int numberOfFans = 5000;
+
+// 如下两行等价，但显然第二行的可读性更好
+long population = 7000000000L;
+long population = 7_000_000_000L;
 ```
 
-We can use the `+` symbol to join String and int values.
+思考一下：为什么要在 7800000000 这个数后面加个 L ？
+
+如果你不加上 L，那么 Java 就只会看到这是一个很大的数，它并不知道你这个开发者要将这个数存到什么地方，所以 Java 就会向你抱怨：“你怎么写了这么大的一个数 ？！！！”
+
+你只需要在这个数后面加个 L 来告诉 Java：“放松啦～ 咱们要存的地方存得下这个数的。”
+
+然后 Java 就平静了。
+
+### Type: double
+
+We can use `double` variables to store decimal numbers,
+
+which are given so much size in memory that a double value can go up to 15 decimal places which is a lot.
 
 ```java
-int points = 50;
-String announcement = " points for Gryffindor";
-System.out.println(points + announcement);
+double percentage = 55.7;
 ```
 
-Just like we update variables, you can also update String variables.
+Avoid just using integers for math calculations ! because if you multiply or divide two integers, the result will always be an integer and Java's going to cut off all the decimals.
 
+```
+integer * integer => integer
+integer / integer => integer
+```
 ```java
-sentence = "end of shift";
+int wallet = 20;
+int people = 3;
+System.out.println(wallet / people); // 6, which is not the result we want.
+
+// So we need to make sure that at least one of these values is stored as a double,
+// then Java is going to know to return a double result.
+double wallet = 20;
+int people = 3;
+System.out.println(wallet / people); // 6.666666666666667, 15 decimals, this is the result we want.
 ```
 
+So it's imperative that you always use `double` for math calculations if precision is important.
