--- a/2.md
+++ b/2.md
@@ -1,34 +1,44 @@
-# Variables
+# Variable
 
-> Store values inside variables.
-
-eg: `int people = 20;`
-
-- The type of value
-
-- The variable name
-
-- The variable value
+> Store value inside variable.
 
 ## Java is strongly typed
 
 which means that variables can only store values of their type.
 
-## The convention to naming variables
+## Java is case sensitive
+
+eg: `people` is not the same as `People`
+
+## The convention to naming a variable
 
 use => **lowerCamelCase**
 
 eg: `int peopleOnBus = 20;`
 
-## Java is case sensitive
+---
 
-eg: `people` is not the same as `People`
+You will define
+
+```java
+// int variables that can store whole numbers
+int number = 6;
+
+// long variables that can store large whole numbers
+long population = 7800000000L;
+
+// double variables that can store decimals
+double decimal = 5.5;
+
+// String variables that can equal text
+String text = "Hello";
+
+// char variables that can store single characters
+char letter = 'a';
+```
 
 ## Update the value inside a variable
 
-Just set it equal to a new value.
+Just set it equal to a new value,
 
-Or use `+=`、`-=`、... for short.
-
-> See you in workbook 2.1
-
+or use `+=`、`-=`、... for short.
