--- a/4.md
+++ b/4.md
@@ -1,32 +1,40 @@
 
-### char type
+### Type: String
 
-We can use the `char` type to store a single character.
-
-note: char is short for a character.
+We can use the `String` type to store text.
 
 ```java
-char gender = 'F';
+String sentence = "Hello world !";
 ```
 
-We can join a String value with a char value using the `+` symbol.
+If you want to update String varibles, just let the variable equals to a new value.
 
 ```java
-System.out.println(
-    "Gender: " + 'F'
-);
+sentence = "Good morning !";
 ```
+
+String unlike int in memory, 
+
+no matter what you store in the integer variable, it's always 4 bytes,
+
+but with String, empty text alone takes up 24 bytes,
+
+and the more text that you add to a string, the more memory it takes up.
+
+---
+
+You can use the `+` operator to join two String values.
 
 ```java
-String gender = "F"; // Obviously, String is more flexible than char.
-
-// So why not always use String ?
-// And what's the point of a char variable if it can only store one character ?
+String sentence = "His name is: ";
+String placeholder = "Harry";
+System.out.println(sentence + placeholder);
 ```
 
-The answer is【memory】and【performance】!
+You can use the `+` operator to join String and int values.
 
-char consumes less memory, and char is faster than String !
-
-See you in workbook 2.2
-
+```java
+int points = 50;
+String announcement = " points for Gryffindor";
+System.out.println(points + announcement);
+```
