--- a/1.md
+++ b/1.md
@@ -82,4 +82,4 @@
 
 	![image-20230331230902548](https://aliyun-oss-lpj.oss-cn-qingdao.aliyuncs.com/images/by-clipboard/image-20230331230902548.png)
 
->  Good luck on Workbook 1.1 !	
+See you in workbook 1.1
