--- a/5.md
+++ b/5.md
@@ -1,27 +1,30 @@
 
-### Types: int and long
+### Typs: char
 
-We can use `int` and `long` variables to store whole numbers.
-
-You should know the difference between `int` and `long` and when to use `int` vs `long`.
+We can use the `char` type to store single characters.
 
 ```java
-int numberOfFans = 5000;
-long population = 7800000000L;
+char gender = 'F';
 ```
 
-### Type: double
-
-We can use `double` variables to store decimal numbers.
-
-And it's imperative that you always use `double` for math calculations if precision is important.
-
-Avoid `int` and `long` for math calculations !
+We can join a String value with a char value using the `+` operator.
 
 ```java
-double percentage = 55.7;
-
-double dividend = 25;
-System.out.println(dividend); // 25.0
+System.out.println("Gender: " + 'F');
 ```
 
+---
+
+```java
+String gender = "F";
+```
+
+It seems that String is more flexible than char.
+
+So why not always use String ?
+
+The answer is【memory】and【performance】!
+
+char consumes less memory, and char is faster than String !
+
+See you in workbook 2.2
