--- a/5.md
+++ b/5.md
@@ -27,4 +27,16 @@ The answer is【memory】and【performance】!
 
 char consumes less memory, and char is faster than String !
 
+### Summarize
+
+There are 6 main data types (we didn't cover `boolean` yet).
+
+| Data Type | Value                    | Amount of Memory (Bytes)         | Valid Range of Values                              |
+| --------- | ------------------------ | -------------------------------- | -------------------------------------------------- |
+| int       | Whole numbers            | 4                                | From: -2147483648 To: 2147483647                   |
+| long      | Very large whole numbers | 8                                | From: -9223372036854775808 To: 9223372036854775807 |
+| double    | Decimals                 | 8                                | Decimal can reach 15 significant digits            |
+| String    | Text                     | Varies, 24 bytes for empty text. | -                                                  |
+| char      | A single character       | 2                                | -                                                  |
+
 See you in workbook 2.2
