--- a/6.md
+++ b/6.md
@@ -1,25 +1,24 @@
 
 ## Math operators
 
-So far you've learned about: `int`、`long`、`double`、`char`、`String`.
+So far you've learned about: `int`、`long`、`double`、`String`、`char`.
 
-You can use math operators to play with these values and operate on them.
+You can use math operators shown as below to play with these values and operate on them.
+
+`+, -, *, /, %, ++, --, +=, -=`
 
 ## Pattern
 
-- An operation between whole numbers returns a whole number.
+An operation between whole numbers returns a whole number.
 
-- An operation between decimals will always perserve the decimal.
+An operation between decimals will always perserve the decimal.
 
-> Notice that we can use the `+` symbol to blend values into a string.
+## Think about that why do we care about the remainder ?
 
-## Think that why do we care about the remainder ?
+It's very useful if you want to identify odd or even numbers.
 
 ```java
 int remainder = 10 % 2; // 0
 ```
 
-It's very useful if you want to identify odd or even numbers.
-
 See you in workbook 2.3
-
