--- a/7.md
+++ b/7.md
@@ -1,7 +1,7 @@
 
 ## Type casting
 
-In Java, we can cast a variable from one type to another.
+In Java, we can cast variables from one type to another.
 
 ```java
 // Casting double to int
@@ -10,5 +10,4 @@ double decimal = 4.3;
 int integer = (int)decimal;
 ```
 
-See you in the next quiz and workbook 2.4
-
+See you in workbook 2.4
