--- a/5.md
+++ b/5.md
@@ -39,4 +39,6 @@ There are 6 main data types (we didn't cover `boolean` yet).
 | String    | Text                     | Varies, 24 bytes for empty text. | -                                                  |
 | char      | A single character       | 2                                | -                                                  |
 
+平时开发我基本不使用 `byte, short, float`
+
 See you in workbook 2.2
