--- a/8.md
+++ b/8.md
@@ -1,19 +1,33 @@
 ## Scanner
 
-Scanner contains methods that we can use to receive user input.
+Scanner contains many methods that we can use to scan for user input.
 
 | method       | scans for |
 | ------------ | --------- |
 | nextInt()    | integers  |
 | nextDouble() | decimals  |
 | nextLine()   | text      |
+| ...          | ...       |
+
+### Usage
 
 We can create an instance of Scanner that can receive input from the System.
 
 ```java
 import java.util.Scanner;
 Scanner sc = new Scanner(System.in);
+```
 
-// pick up user input
-String name = sc.nextLine();
+Now, we can use sc's methods to pick up integers、decimals or text from user input.
+
+```java
+int coffeeAmount    = sc.nextInt();
+double coffeePrice  = sc.nextDouble();
+String name         = sc.nextLine();
+```
+
+Once you are done with sc, always close it, otherwise you're going to get a resource leak.
+
+```java
+sc.close();
 ```
