--- a/1.md
+++ b/1.md
@@ -16,7 +16,7 @@
 	Basically all you need to do is install it and it's going to do the heavy lifting.
 
 	```shell
-	# Checking
+	# Check
 	javac -version
 	java -version
 	# v17.0.6(LTS)
@@ -52,12 +52,12 @@
 	
 	All right, so what's next is the `main()` method, which is the entry point of a Java application.
 	
-	And inside main, we're going to print the message "Hello Java !"
+	And inside main, we're going to print the message "Hello Java"
 	
 	```java
 	public class HelloJava {
 		public static void main(String[] args) {
-			System.out.println("Hello Java !");
+			System.out.println("Hello Java");
 		}
 	}
 	
