--- a/2.md
+++ b/2.md
@@ -1,46 +1,24 @@
-# Variable
+## Variable
 
-> Store value inside variable.
+> Store information inside variable.
 
-## Java is strongly typed
+### Java is strongly typed
 
 which means that variables can only store values of their type.
 
-## Java is case sensitive
+### Java is case sensitive
 
 eg: `people` is not the same as `People`
 
-## The convention to naming a variable
+### The convention to naming a variable
 
-use => **lowerCamelCase**
+**lowerCamelCase**
 
 eg: `int peopleOnBus = 20;`
 
----
+### Update the value inside a variable
 
-You will define
-
-```java
-// int variables that can store whole numbers
-int number = 6;
-
-// long variables that can store large whole numbers
-long population = 7800000000L;
-
-// double variables that can store decimals
-double decimal = 5.5;
-
-// String variables that can equal text
-String text = "Hello";
-
-// char variables that can store single characters
-char letter = 'a';
-```
-
-## Update the value inside a variable
-
-Just set it equal to a new value,
-
-or use `+=`、`-=`、... for short.
+Just set it equal to a new value, or use `+=`、`-=`、...
 
 See you in workbook 2.1
+
