--- a/4.md
+++ b/4.md
@@ -31,10 +31,11 @@ String placeholder = "Harry";
 System.out.println(sentence + placeholder);
 ```
 
-You can use the `+` operator to join String and int values.
+You can use the `+` operator to blend integer values into a string.
 
 ```java
-int points = 50;
+double points = 50;
 String announcement = " points for Gryffindor";
-System.out.println(points + announcement);
+System.out.println(points + announcement); // 50.0 points for Gryffindor
 ```
+
