--- a/5.md
+++ b/5.md
@@ -1,5 +1,5 @@
 
-### Typs: char
+### Type: char
 
 We can use the `char` type to store single characters.
 
@@ -19,9 +19,9 @@ System.out.println("Gender: " + 'F');
 String gender = "F";
 ```
 
-It seems that String is more flexible than char.
+It seems that String is more flexible than char,
 
-So why not always use String ?
+so why not always use String ?
 
 The answer is【memory】and【performance】!
 
@@ -29,7 +29,7 @@ char consumes less memory, and char is faster than String !
 
 ### Summarize
 
-There are 6 main data types (we didn't cover `boolean` yet).
+There are 6 core data types (we didn't cover `boolean` yet).
 
 | Data Type | Value                    | Amount of Memory (Bytes)         | Valid Range of Values                              |
 | --------- | ------------------------ | -------------------------------- | -------------------------------------------------- |
@@ -42,3 +42,4 @@ There are 6 main data types (we didn't cover `boolean` yet).
 平时开发我基本不使用 `byte, short, float`
 
 See you in workbook 2.2
+
