--- a/7.md
+++ b/7.md
@@ -4,10 +4,11 @@
 In Java, we can cast variables from one type to another.
 
 ```java
-// Casting double to int
+// Cast double to int
 // Just telling Java the type that we're casting to.
 double decimal = 4.3;
 int integer = (int)decimal;
 ```
 
 See you in workbook 2.4
+
