--- a/8.md
+++ b/8.md
@@ -11,23 +11,25 @@ Scanner contains many methods that we can use to scan for user input.
 
 ### Usage
 
-We can create an instance of Scanner that can receive input from the System.
+1、Create an instance of Scanner which can receive input from the `System.in`.
 
 ```java
 import java.util.Scanner;
 Scanner sc = new Scanner(System.in);
 ```
 
-Now, we can use sc's methods to pick up integers、decimals or text from user input.
+2、Use Scanner's methods to pick up (integers、decimals、text、...) from user input.
 
 ```java
 int coffeeAmount    = sc.nextInt();
 double coffeePrice  = sc.nextDouble();
 String name         = sc.nextLine();
+...
 ```
 
-Once you are done with sc, always close it, otherwise you're going to get a resource leak.
+3、Once you are done with Scanner, always close it, otherwise you're going to get a resource leak.
 
 ```java
 sc.close();
 ```
+
