你和程序并非直接交互的，中间还有个 Shell，而 Shell 有个缓冲区

--- a/8.md
+++ b/8.md
@@ -2,12 +2,14 @@
 
 Scanner contains many methods that we can use to scan for user input.
 
-| method       | scans for |
-| ------------ | --------- |
-| nextInt()    | integers  |
-| nextDouble() | decimals  |
-| nextLine()   | text      |
-| ...          | ...       |
+| method       | scans for | explaination                                       |
+| ------------ | --------- | -------------------------------------------------- |
+| nextInt()    | integers  | skips the whiteSpace and picks up the next Integer |
+| nextLong()   | integers  | skips the whiteSpace and picks up the next Long    |
+| nextDouble() | decimals  | skips the whiteSpace and picks up the next Double  |
+| next()       | text      | skips the whiteSpace and picks up the next String  |
+| nextLine()   | text      | picks up a line of data                            |
+| ...          | ...       | ...                                                |
 
 ### Usage
 
@@ -32,4 +34,3 @@ String name         = sc.nextLine();
 ```java
 sc.close();
 ```
-
