--- a/10.md
+++ b/10.md
@@ -30,3 +30,5 @@
 显而易见，用 `nextLine()` “吃一下残留在 Shell 的缓冲区中的回车”呗～
 
 即：place a throwaway nextLine before the 'real' nextLine
+
+See you in workbook 2.5
