--- a/12.md
+++ b/12.md
@@ -1,35 +1,4 @@
-
-### Type: char
-
-We can use the `char` type to store single characters.
-
-```java
-char gender = 'F';
-```
-
-We can join a String value with a char value using the `+` operator.
-
-```java
-System.out.println("Gender: " + 'F');
-```
-
----
-
-```java
-String gender = "F";
-```
-
-It seems that String is more flexible than char,
-
-so why not always use String ?
-
-The answer is【memory】and【performance】!
-
-char consumes less memory, and char is faster than String !
-
-### Summarize
-
-There are 6 core data types (we didn't cover `boolean` yet).
+## boolean
 
 | Data Type | Amount of Memory (Bytes)         | Valid Range of Values                              | Value                    |
 | --------- | -------------------------------- | -------------------------------------------------- | ------------------------ |
@@ -38,8 +7,9 @@ There are 6 core data types (we didn't cover `boolean` yet).
 | double    | 8                                | Decimal can reach 15 significant digits            | Decimals                 |
 | String    | Varies, 24 bytes for empty text. | -                                                  | Text                     |
 | char      | 2                                | -                                                  | A single character       |
+| boolean   | 1                                | true or false                                      |                          |
 
-平时开发我基本不使用 `byte, short, float`
-
-See you in workbook 2.2
-
+```java
+boolean bool1 = true;
+boolean bool2 = false;
+```
