--- a/1.md
+++ b/1.md
@@ -16,24 +16,22 @@
 	Basically all you need to do is install it and it's going to do the heavy lifting.
 
 	```shell
-	# Check
-	javac -version
-	java -version
-	# v17.0.6(LTS)
+	javac -version  # check compiler
+	java -version   # check runtime
 	```
 
 	Finished ! you've just installed a JDK, now your computer can compile and run Java code.
 
 2. Download a text editor to write code
 
-	I use vim & vscode(download the extension pack for java).
+	I use vim & vscode(the extension pack for java is must).
 
 	Now you have everything you need to start building Java applications!
 
 3. Write & Run your first Java code
 
 	```shell
-	# Every java file needs to follow the naming convention -> CamelCase.
+	# Every java file needs to follow the naming convention -> CamelCase
 	touch HelloJava.java
 	```
 	```java
@@ -44,7 +42,7 @@
 	}
 	
 	/* Notice:
-		the [public] exposes current class to other classes that may exist inside our workspace,
+		the [public] exposes current class to other classes that may exist inside your workspace,
 		but since now we have only one class,
 		so it's optional.
 	*/
