--- a/3.md
+++ b/3.md
@@ -22,9 +22,7 @@ long population = 7_000_000_000L;
 
 ### Type: double
 
-We can use `double` variables to store decimal numbers,
-
-which are given so much size in memory that a double value can reach 15 [significant digits](https://zh.wikipedia.org/wiki/有效数字).
+We can use `double` variables to store decimal numbers, which are given so much size in memory that a double value can reach 15 [significant digits](https://zh.wikipedia.org/wiki/有效数字).
 
 ```java
 double percentage = 55.7;
@@ -41,17 +39,21 @@ integer * integer => integer
 integer / integer => integer
 ```
 
+eg
+
 ```java
 int people = 3;
 int wallet = 20;
 System.out.println(wallet / people); // 6, which is not the result we want.
 
-// So we need to make sure that at least one of these values is stored as a double,
-// then Java's going to know to return a double result.
+// So we need to make sure that at least one of these values is stored as a decimal,
+// then Java's going to know to return a decimal result.
 int people = 3;
 double wallet = 20;
 System.out.println(wallet / people); // 6.666666666666667, this is the result we want.
 ```
 
-So it's imperative that you always use `double` for math calculations if precision is important.
+### Golden Rule
+
+If precision is important, use `double` for math calculations.
 
