--- a/4.md
+++ b/4.md
@@ -1,7 +1,7 @@
 
 ### Type: String
 
-We can use the `String` type to store text.
+We can use the type `String` to store text.
 
 ```java
 String sentence = "Hello world !";
@@ -31,7 +31,7 @@ String placeholder = "Harry";
 System.out.println(sentence + placeholder);
 ```
 
-You can use the `+` operator to blend integer values into a string.
+You can use the `+` operator to blend values into a string.
 
 ```java
 double points = 50;
