--- a/6.md
+++ b/6.md
@@ -3,17 +3,17 @@
 
 So far you've learned about: `int`、`long`、`double`、`String`、`char`.
 
-You can use math operators shown as below to play with these values and operate on them.
+You can use math operators shown as below to play with these values.
 
 `+, -, *, /, %, ++, --, +=, -=, ...`
 
-## Pattern
+### Pattern
 
 An operation between whole numbers returns a whole number.
 
 An operation between decimals will always perserve the decimal.
 
-## Think about that why do we care about the remainder ?
+### Think about that why do we care about the remainder ?
 
 It's very useful if you want to identify odd or even numbers.
 
