--- a/12.md
+++ b/12.md
@@ -1,15 +1,17 @@
 ## boolean
 
-| Data Type | Amount of Memory (Bytes)         | Valid Range of Values                              | Value                    |
-| --------- | -------------------------------- | -------------------------------------------------- | ------------------------ |
-| int       | 4                                | From: -2147483648 To: 2147483647                   | Whole numbers            |
-| long      | 8                                | From: -9223372036854775808 To: 9223372036854775807 | Very large whole numbers |
-| double    | 8                                | Decimal can reach 15 significant digits            | Decimals                 |
-| String    | Varies, 24 bytes for empty text. | -                                                  | Text                     |
-| char      | 2                                | -                                                  | A single character       |
-| boolean   | 1                                | true or false                                      |                          |
-
 ```java
 boolean bool1 = true;
 boolean bool2 = false;
 ```
+
+### Summarize
+
+| Data Type | Amount of Memory (Bytes)         | Valid Range of Values                              | Value                    |
+| --------- | -------------------------------- | -------------------------------------------------- | ------------------------ |
+| int       | 4                                | From: -2147483648 To: 2147483647                   | Whole numbers            |
+| long      | 8                                | From: -9223372036854775808 To: 9223372036854775807 | Very large whole numbers |
+| double    | 8                                | a decimal can reach 15 significant digits          | Decimals                 |
+| String    | Varies, 24 bytes for empty text. | -                                                  | Text                     |
+| char      | 2                                | -                                                  | A single character       |
+| boolean   | 1                                | true or false                                      |                          |
