--- a/8.md
+++ b/8.md
@@ -2,7 +2,7 @@
 
 Scanner contains many methods that we can use to scan for user input.
 
-| method       | scans for | explaination                                       |
+| method       | scan for  | explaination                                       |
 | ------------ | --------- | -------------------------------------------------- |
 | nextInt()    | integers  | skips the whiteSpace and picks up the next Integer |
 | nextLong()   | integers  | skips the whiteSpace and picks up the next Long    |
