--- a/8.md
+++ b/8.md
@@ -11,6 +11,8 @@ Scanner contains many methods that we can use to scan for user input.
 | nextLine()   | text      | picks up a line of data                            |
 | ...          | ...       | ...                                                |
 
+> The default delimiter is white space.
+
 ### Usage
 
 1、Create an instance of Scanner which can receive input from the `System.in`.
