--- a/17.md
+++ b/17.md
@@ -17,3 +17,5 @@ Instead of writing all of your code inside of a single code block,
 
 you can split it up into functions and call them as needed.
 
+Organize your code using functions!
+
