function is reusable

--- a/17.md
+++ b/17.md
@@ -5,7 +5,7 @@ And the more code you write, the more unreadable that it becomes.
 
 ### Functions
 
-A function is a grouping of code that performs a task.
+A function is a reusable grouping of code that performs a task.
 
 Some functions rely on parameters to perform their task.
 
