functions name needs to represent the task it's performing

--- a/18.md
+++ b/18.md
@@ -5,6 +5,10 @@ See video on udemy.
 
 ### Notice
 
+Functions' name needs to represent the task it's performing.
+
+### Notice
+
 `public` means the function can be publicly accessed from any package or subfolder,
 
 but because we've got only one package with a single class in it,
