--- a/11.md
+++ b/11.md
@@ -1,6 +1,6 @@
 # Booleans and Conditionals
 
-In this section, you will gain full conntrol over how your code runs.
+In this section, you will gain full control over how your code runs.
 
 ### Roadmap
 
