--- a/12.md
+++ b/12.md
@@ -7,11 +7,11 @@ boolean bool2 = false;
 
 ### Summarize
 
-| Data Type | Amount of Memory (Bytes)         | Valid Range of Values                              | Value                    |
-| --------- | -------------------------------- | -------------------------------------------------- | ------------------------ |
-| int       | 4                                | From: -2147483648 To: 2147483647                   | Whole numbers            |
-| long      | 8                                | From: -9223372036854775808 To: 9223372036854775807 | Very large whole numbers |
-| double    | 8                                | a decimal can reach 15 significant digits          | Decimals                 |
-| String    | Varies, 24 bytes for empty text. | -                                                  | Text                     |
-| char      | 2                                | -                                                  | A single character       |
-| boolean   | 1                                | true or false                                      |                          |
+| Data Type | Value                    | Amount of Memory (Bytes)         | Valid Range of Values                              |
+| --------- | ------------------------ | -------------------------------- | -------------------------------------------------- |
+| int       | Whole numbers            | 4                                | From: -2147483648 To: 2147483647                   |
+| long      | Very large whole numbers | 8                                | From: -9223372036854775808 To: 9223372036854775807 |
+| double    | Decimals                 | 8                                | a decimal can reach 15 significant digits          |
+| char      | A single character       | 2                                | -                                                  |
+| String    | Text                     | Varies, 24 bytes for empty text. | -                                                  |
+| boolean   |                          | 1                                | true or false                                      |
