--- a/17.md
+++ b/17.md
@@ -5,7 +5,7 @@ And the more code you write, the more unreadable that it becomes.
 
 ### Functions
 
-A function is a reusable grouping of code that performs a task.
+A function is a grouping of code, it performs a task, and obviously it's reusable.
 
 Some functions rely on parameters to perform their task.
 
@@ -17,5 +17,5 @@ Instead of writing all of your code inside of a single code block,
 
 you can split it up into functions and call them as needed.
 
-Organize your code using functions!
+Let's begin organizing your code using functions!
 
