--- a/18.md
+++ b/18.md
@@ -17,17 +17,9 @@ it doesn't really matter what level of access you specify.
 
 ### Notice
 
-You can notice that `main()` is also a function,
+You can notice that `main()` is also a function, it has a very similar signature to our functions.
 
-it has a very similar signature to our functions.
+Every function has a specific task that it performs, the `main()` function performs the task of running our application.
 
-Every function has a specific task that it performs,
-
-and the `main()` function performs the task of running our application.
-
-The `main()` function has a very specific signature that the JVM looks for when you run your app,
-
-and when it finds your `main()` function, it executes it.
-
-> You can reuse the function as many times as you need to.
+The `main()` function has a very specific signature that the JVM looks for when you run your app, when it finds `main()` function, it executes it.
 
