--- a/19.md
+++ b/19.md
@@ -5,17 +5,13 @@ Functions with parameters expect to receive values.(these functions rely on para
 
 Functions【without】parameters【do not expect】to receive values.
 
----
-
-A parameter stores a value that your function expects to receive.
-
 Parameters are essentially just variables.
 
 ## Arguments
 
 A value that you pass into a function is known as an argument.
 
-Parameters and Arguments makes functions completely reusable.
+**Parameters and Arguments makes functions completely reusable**!
 
 ## Notice
 
