--- a/6.md
+++ b/6.md
@@ -1,7 +1,7 @@
 
 ## Math operators
 
-So far you've learned about: `int`、`long`、`double`、`String`、`char`.
+So far you've learned about: `int`、`long`、`double`、`char`、`String`.
 
 You can use math operators shown as below to play with these values.
 
