Void vs Returning values

--- a/20.md
+++ b/20.md
@@ -9,3 +9,15 @@ Bad practice: Your function handles the final result.
 
 Good practice: Your function return the final result.
 
+## Notice
+
+Whenever you specify a return type,
+
+you need to make sure that something gets returned no matter what gets passed in.
+
+## Terminate the runTime
+
+```java
+System.exit(0);
+```
+
