--- a/23.md
+++ b/23.md
@@ -8,3 +8,6 @@ But to be honest, a good developer never memorizes code!
 Instead, a good developer uses the internet!
     to read documentation.
     to find resources.
+
+See you in workbook 4.5
+
