--- a/24.md
+++ b/24.md
@@ -1,7 +1,19 @@
 ### Loops
 
-For Loop: designed to run code a specific number of times.
+For Loops: designed to run code a specific number of times.
 
-While Loop: designed to run code an unknown number of times.
+While Loops: designed to run code an unknown number of times.
 
 You will use the `break` and `continue` keywords to gain full control over your loops.
+
+### For Loops
+
+```java
+for (int i = 0; i < 3; i ++) {
+
+}
+```
+
+### print vs println
+
+See workbook.
