--- a/24.md
+++ b/24.md
@@ -17,3 +17,17 @@ for (int i = 0; i < 3; i ++) {
 ### print vs println
 
 See workbook.
+
+### While Loops
+
+What is a while loop ?
+
+A while loop keeps running while a condition is true.
+
+```java
+while (condition) {
+
+}
+```
+
+See you in workboook 5.8 ~ 5.10
