gain full control over your loops.

--- a/24.md
+++ b/24.md
@@ -14,10 +14,6 @@ for (int i = 0; i < 3; i ++) {
 }
 ```
 
-### print vs println
-
-See workbook.
-
 ### While Loops
 
 What is a while loop ?
@@ -31,3 +27,19 @@ while (condition) {
 ```
 
 See you in workboook 5.8 ~ 5.10
+
+---
+
+`break` and `continue` keywords provide you with greater control over your loops.
+
+### continue
+
+The `continue` keyword skips a run in the loop and continues with the next one.
+
+### break
+
+The `break` keyword when invoked, breaks the loop entirely.
+
+### print vs println
+
+See workbook.
