--- a/27.md
+++ b/27.md
@@ -17,7 +17,7 @@ So we can use the `length` property to loop arrays.
 String[] numbers = { 1, 2, 3, 4, 5, 6 };
 
 // If you want to access each element in the array
-// Would you perfer to index them all individually
+// Would you perfer to index them all individually ?
 numbers[0]
 numbers[1]
 numbers[2]
@@ -44,9 +44,7 @@ for (int i = 0; i < numbers.length; i++) {
 
 #### foreach 循环
 
-foreach simplifies looping through an array without the need for a counter
-
-or a counter increment or anything.
+foreach simplifies looping through an array without the need for a counter or a counter increment or anything.
 
 ```java
 // autoComplete a foreach loop in vscode: fore<ENTER>
